@@ -1,3 +1,5 @@
+# $Id$
+
 # Network Options
 #####################################################################
 
@@ -162,6 +164,7 @@ TOWN_Y = 32
 TOWN_BASE = 0
 
 # Option : Maximum depth of Angband. [127]
+# *NOTE* set this to a value below 100 and Morgoth will never show up!
 DUNGEON_MAX = 127
 
 # Option : Base danger level of Angband. [1]
@@ -170,11 +173,22 @@ DUNGEON_BASE = 1
 # Option : allow everyone to see mangband.rfe? [false]
 PUBLIC_RFE = false
 
-# Options : allow/disallow categories of monsters -
-# Zelazny, Pern, Lovecraft, Joke and vanilla(!). [f,t,t,f,t]
+# Option : purge non-used monsters/objects every 24H. [true]
+# if server is getting too slow, try this option.
+# (even when 'false', you can '/purge' manually.
+AUTO_PURGE = true
+
+# Option : multiplier of HP/SP recovery rate when resting. [3]
+RESTING_RATE = 3
+
+# Option : xp bonus to encourage party-playing, based on C.Blue's idea. [2]
+PARTY_XP_BOOST = 2
+
+# Options : chance of creation of each categorie of monsters, in percent -
+# Zelazny, Pern, Lovecraft, Joke and vanilla(!). [10,100,100,1,100]
 # Note: joke monsters are nasty at the same time, so be warned.
-ZANG_MONSTERS = false
-PERN_MONSTERS = true
-CTH_MONSTERS = true
-JOKE_MONSTERS = false
-VANILLA_MONSTERS = true
+ZANG_MONSTERS = 10
+PERN_MONSTERS = 100
+CTH_MONSTERS = 100
+JOKE_MONSTERS = 1
+VANILLA_MONSTERS = 100
